feat(WorldAsRoot): Define World as root node
- Set Scene with a Tree node of GameObject
- set World as Root node
- modify Scene to use this Tree as objects list.
- modify PhysicEngine and Renderer to use those tree.